2016-12-21  Nick Alcock  <nick.alcock@oracle.com>

	[BZ #7065]
	* configure.ac (HAVE_CC_NO_STACK_PROTECTOR): Define.
	* config.h.in (HAVE_CC_NO_STACK_PROTECTOR): New macro.
	* include/libc-symbols.h (inhibit_stack_protector): New macro.
	(__ifunc_resolver): Use it.
	* elf/ifuncdep2.c (foo1_ifunc, foo2_ifunc, foo3_ifunc): Apply
	inhibit_stack_protector.
	* elf/ifuncmain6pie.c (foo_ifunc): Likewise.
	* elf/ifuncmain7.c (foo_ifunc): Likewise.
	* elf/ifuncmod1.c (foo_ifunc, foo_hidden_ifunc)
	(foo_protected_ifunc): Likewise.
	* elf/ifuncmod5.c (foo_ifunc, foo_hidden_ifunc)
	(foo_protected_ifunc): Likewise.
	* sysdeps/generic/ifunc-sel.h (ifunc_sel, ifunc_one): Likewise.
	* sysdeps/nacl/nacl_interface_query.c
	(nacl_interface_query_ifunc): Likewise.
	* sysdeps/powerpc/ifunc-sel.h (ifunc_sel, ifunc_one): Likewise.
	* sysdeps/unix/sysv/linux/x86_64/x32/getcpu.c (getcpu_ifunc):
	Likewise.
	* sysdeps/x86_64/ifuncmod8.c (foo_ifunc): Likewise.
	* sysdeps/unix/make-syscalls.sh: Apply inhibit_stack_protector to
	the generated vDSO syscall resolver.

2016-12-21  Nick Alcock  <nick.alcock@oracle.com>
	    Florian Weimer  <fweimer@redhat.com>

	[BZ #7065]
	Initialize the stack guard earlier when linking statically.
	* sysdeps/generic/ldsodefs.h (__libc_setup_tls)
	(__pthread_initialize_minimal): Declare.
	* csu/libc-start.c (__pthread_initialize_minimal): Remove
	declaration.
	(LIBC_START_MAIN): Call __libc_setup_tls early and directly.  Move
	stack canary and apply_irel initialization up.  Call
	__pthread_initialize_minimal only if linked in.
	* csu/libc-tls.c (__libc_setup_tls): Replace arguments with their
	constant values.
	(__pthread_initialize_minimal): Remove.
	* nptl/nptl-init.c (__libc_setup_tls): Remove declaration.
	(__pthread_initialize_minimal_internal): Do not call
	__libc_setup_tls.

2016-12-21  Nick Alcock  <nick.alcock@oracle.com>

	[BZ #7065]
	* configure.ac (libc_cv_ssp): Move up.
	(libc_cv_ssp_strong): Likewise.
	(libc_cv_ssp_all): New.